--- a/index.html
+++ b/index.html
@@ -14,27 +14,28 @@
 
 <div class="jumbotron text-center head">
   <h1>Rock Paper Scissor</h1>
+  <button class="btn btn-danger mt-30">Restart Game</button>
 </div>
 
 <div class="container">
 	<div class="row cen">
 		<h3>
-		<span class="weight">PLAYER  |</span> 
-		<span class="weight">COMPUTER</span>
+		<span class="weight red">PLAYER </span> <span class="weight">|</span> 
+		<span class="weight red">COMPUTER</span>
 		</h3>
 	</div>
 </div>
   
-<div class="container mt-30">
+<div class="container pt-30">
   <div class="row">
-  	<div class="col-sm-4 cen">
-      <i class="fa fa-hand-grab-o" style="font-size:80px;"></i>
+  	<div class="col-sm-4 cen iconsize">
+      <a href=""><i class="fa fa-hand-grab-o"></i></a>
     </div>
-    <div class="col-sm-4 cen">
-      <i class="fa fa-file" style="font-size:80px;"></i>
+    <div class="col-sm-4 cen iconsize">
+      <a href=""><i class="fa fa-file"></i></a>
     </div>
-    <div class="col-sm-4 cen">
-      <i class="fa fa-cut fa-" style="font-size:80px"></i>
+    <div class="col-sm-4 cen iconsize">
+      <a href=""><i class="fa fa-cut" ></i></a>
     </div>
   </div>
 </div>
