--- a/index.html
+++ b/index.html
@@ -19,25 +19,27 @@
 
 <div class="container">
 	<div class="row cen">
-		<h3>
+		<h4>
 		<span class="weight red">PLAYER </span> <span class="weight">|</span> 
 		<span class="weight red">COMPUTER</span>
-		</h3>
+		</h4>
 	</div>
 </div>
   
 <div class="container pt-30">
   <div class="row">
   	<div class="col-sm-4 cen iconsize">
-      <a href=""><i class="fa fa-hand-grab-o"></i></a>
+      <a href=""><i class="fa fa-hand-grab-o" id="stone"></i></a>
     </div>
     <div class="col-sm-4 cen iconsize">
-      <a href=""><i class="fa fa-file"></i></a>
+      <a href=""><i class="fa fa-file-text-o" id="paper"></i></a>
     </div>
     <div class="col-sm-4 cen iconsize">
-      <a href=""><i class="fa fa-cut" ></i></a>
+      <a><i class="fa fa-cut" id="scissor"></i></a>
     </div>
   </div>
 </div>
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
+
