--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="jumbotron text-center head">
-  <h1>Rock Paper Scissor</h1>
+  <h2 class="weight">Rock Paper Scissor</h2>
   <button class="btn btn-danger mt-30">Restart Game</button>
 </div>
 
