--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 <div class="container pt-30">
   <div class="row">
   	<div class="col-sm-4 cen iconsize">
-      <a href=""><i class="fa fa-hand-grab-o" id="stone"></i></a>
+      <a><i class="fa fa-hand-grab-o" id="stone"></i></a>
     </div>
     <div class="col-sm-4 cen iconsize">
-      <a href=""><i class="fa fa-file-text-o" id="paper"></i></a>
+      <a><i class="fa fa-file-text-o" id="paper"></i></a>
     </div>
     <div class="col-sm-4 cen iconsize">
       <a><i class="fa fa-cut" id="scissor"></i></a>
