--- a/index.html
+++ b/index.html
@@ -14,43 +14,26 @@
 
 <div class="jumbotron text-center head">
   <h2 class="weight">Rock Paper Scissor</h2>
-  <button class="btn btn-danger mt-30">Restart Game</button>
+  <button class="btn btn-danger mt-30" id="restart">Restart Game</button>
 </div>
 
-
-<!-- <div class="container">
-<div class="row">
-<div class="col-sm-2 cen"> 
-<table class="table table-condensed iblock">
-    <thead>
-      <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
+<div class="container weight">        
+  <table class="table table-bordered cen">
+    <thead class="cen">
+      <tr class="info">
+        <th class="cen">PLAYER</th>
+        <th class="cen">COMPUTER</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>Mary</td>
-        <td>Moe</td>
+        <td id="playerpoints">1</td>
+        <td id="computerpoints">2</td>
       </tr>
     </tbody>
-</table>
+  </table>
 </div>
-</div>
-</div> -->
 
-<div class="container">
-	<div class="row cen">
-		<h4>
-		<span class="weight red">PLAYER </span> <span class="weight">|</span> 
-		<span class="weight red">COMPUTER</span>
-		</h4>
-    <h4>
-    <span class="weight ">0 </span>  
-    <span class="weight ">0</span>
-    </h4>
-	</div>
-</div>
   
 <div class="container pt-30">
   <div class="row">
