--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Rock Paper Scissor - Game</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="images/console.png" type="image/gif" sizes="16x16">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -33,7 +34,6 @@
     </tbody>
   </table>
 </div>
-
   
 <div class="container pt-30">
   <div class="row">
@@ -48,13 +48,39 @@
     </div>
   </div>
 </div>
-<div class="container" id="output"> 
+
+
+<div class="container">
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h3 class="modal-title cen weight blue">Result</h3>
+        </div>
+        <div class="modal-body cen">
+            <h4 class="weight">Player</h4>
+            <p class="iconsmall"> <i class="fa" id="userchoice"></i> </p> 
+            <h4 class="weight">Computer</h4>
+            <p class="iconsmall"> <i class="fa" id="computerchoice"></i> </p> 
+            <h4 class="weight green" id="res"></h4>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+</div>
+
+<!-- <div class="container" id="output"> 
   <div class="row" class="cen"> 
     <p>Result</p>
     <p id="res"></p>
     <p id="computerchoice"></p>    
   </div>
-</div>
+</div> -->
   <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
